--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,24 @@ canvas#canvas {
     height: 100%;
     background: black;
 }
+
+div#loading-indicator {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+div#loading-indicator > h1 {
+    color: white;
+    flex: 1 1 100%;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+img#loading {
+    width: 40%;
+    max-height: 100%;
+}
